<resources>
    <string name="app_name">SupperApp</string>
    <string name="superapp">SuperApp</string>
    <string name="jee">JEE</string>
    <string name="neet">neet</string>
    <string name="academic">Academic</string>
    <string name="social_media">social Media</string>
    <string name="news">News</string>
    <string name="sports">Sports</string>
    <string name="jee_main_advance">JEE Main / advance</string>
    <string name="engineering_exam">engineering exam</string>
    <string name="medical_exams">medical exams</string>
    <string name="civil_services_exam">civil services exam</string>
    <string name="business_administration">business administration</string>
    <string name="entrance_exam">Entrance exam</string>
    <string name="sign_in_with_phone">Sign In With Phone</string>
    <string name="sign_in_with_email">sign in with email</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="logout">Logout</string>
    <string name="title_activity_super_navigation">SuperNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>