<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:theme="@style/Theme.SuperApp.hidenavAndStatusBar"
    tools:context=".Academics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp">

        <Toolbar
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/alegreya_sc"
                android:text="@string/academic"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </Toolbar>

        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="20dp"
            android:id="@+id/jeeMainAdvance"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:text="@string/entrance_exam"
            android:textColor="@color/white"
            android:fontFamily="@font/alegreya_sc"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/neet"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:text="@string/medical_exams"
            android:textColor="@color/white"
            android:fontFamily="@font/alegreya_sc"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upsc"
            android:layout_marginTop="20dp"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:text="@string/civil_services_exam"
            android:textColor="@color/white"
            android:fontFamily="@font/alegreya_sc"
            app:cornerRadius="15dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/black"
            android:text="@string/business_administration"
            android:textColor="@color/white"
            android:fontFamily="@font/alegreya_sc"
            app:cornerRadius="15dp" />

    </LinearLayout>

</RelativeLayout>